--- a/views/partials/success.ejs
+++ b/views/partials/success.ejs
@@ -1,7 +1,7 @@
 <!-- 
 	Modal which is shown if an action has sent a request successfully
  -->
-<div class="modal fade scrollen" id="requestrun" role="dialog">
+<div class="modal fade scrollen" id="successModal" role="dialog">
 	<div class="modal-dialog">
 	<!-- Modal content-->
 		<div class="modal-content">
