--- a/views/partials/failure.ejs
+++ b/views/partials/failure.ejs
@@ -1,7 +1,7 @@
 <!-- 	Request failed Modal
 		It is used if an action can not be send.
  -->
-<div class="modal fade scrollen" id="requestfail" role="dialog">
+<div class="modal fade scrollen" id="failModal" role="dialog">
 	<div class="modal-dialog">
 	<!-- Modal content-->
 		<div class="modal-content">
